week09-10/manifests/bad-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bad-app
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: nginx
          image: nginx:latest # Uses :lastest tag


# No resource (limits or requests)
# No probes
