week09-10/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-app
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gitops-app
  template:
    metadata:
      labels:
        app: gitops-app
    spec:
      containers:
      - name: gitops-app
        image: nginx:1.27
        ports:
        - containerPort: 80
