week09-10/manifests/secret-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secret-deployment
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: secret-deployment
  template:
    metadata:
      labels:
        app: secret-deployment
    spec:
      containers:
        - name: secret-deployment
          image: nginx:1.27
          ports:
            - containerPort: 80
          volumeMounts:
            - name: app-secret
              mountPath: "/app/app-secret"
              readOnly: true
            - name: app-secret-yaml
              mountPath: "/app/app-secret-yaml"
              readOnly: true
      volumes:
        - name: app-secret
          secret:
            secretName: app-secret
        - name: app-secret-yaml
          secret:
            secretName: app-secret-yaml
