week09-10/manifests/gatekeeper-constraint-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: gatekeeperpolicy
spec:
  crd:
    spec:
      names:
        kind: GatekeeperPolicy
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package gatekeeperpolicy

        violation[{"msg": msg}] {
          container := input.review.object.spec.template.spec.containers[_]
          endswith(container.image, ":latest")
          msg := sprintf("'%v' uses :latest tag", [container.name])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.template.spec.containers[_]
          not container.resources.limits
          msg := sprintf("'%v' is missing resource limits", [container.name])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.template.spec.containers[_]
          not container.resources.requests
          msg := sprintf("'%v' is missing resource requests", [container.name])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.template.spec.containers[_]
          not container.livenessProbe
          msg := sprintf("'%v' is missing livenessProbe", [container.name])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.template.spec.containers[_]
          not container.readinessProbe
          msg := sprintf("'%v' is missing readinessProbe", [container.name])
        }
